# lffs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  SPECv1.md
scripts/: test.sh  torture.sh
scripts/files/: a  b  c  f1M  f1k  f2k  f4k
src/: fs.c  fs.h  main.c
